# new-phone

./: .bandit.yml  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.ha.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
ai-engine/: Dockerfile  pyproject.toml
ai-engine/src/ai_engine/: config.py  main.py
ai-engine/src/ai_engine/api/: router.py  schemas.py
ai-engine/src/ai_engine/audio/: resampler.py  vad_manager.py  ws_handler.py
ai-engine/src/ai_engine/core/: conversation_coordinator.py  models.py  session_store.py
ai-engine/src/ai_engine/pipelines/: anthropic_llm.py  base.py  deepgram_stt.py  elevenlabs_tts.py  openai_llm.py  openai_stt.py  openai_tts.py  orchestrator.py
ai-engine/src/ai_engine/providers/: base.py  deepgram.py  elevenlabs.py  factory.py  google_live.py  openai_realtime.py  pipeline_provider.py
ai-engine/src/ai_engine/services/: db_logger.py  engine.py  metrics.py  redis_events.py
ai-engine/src/ai_engine/tools/: adapters.py  base.py  context.py  registry.py
ai-engine/tests/: conftest.py  test_conversation_coordinator.py  test_engine.py  test_factory.py  test_models.py  test_pipeline_orchestrator.py  test_pipeline_provider.py  test_resampler.py  test_router.py  test_schemas.py  test_session_store.py  test_tool_adapters.py  test_tool_base.py  test_tool_business.py  test_tool_registry.py  test_tool_telephony.py  test_vad_manager.py
api/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 0001_initial_schema.py  0002_rls_policies.py  0003_telephony_tables.py  0004_telephony_rls.py  0005_freeswitch_integration.py  0006_cdr_recordings.py  0007_cdr_recordings_rls.py  0008_voicemail_ivr_time.py  0009_phase5_rls.py  0010_queues.py  0011_queues_rls.py  0012_conference_paging_pickup.py  0013_conference_paging_rls.py  0014_audit_follow_me.py  0015_audit_follow_me_rls.py  0016_phase9_tables.py  0017_phase9_rls.py  0018_phone_provisioning.py  0019_phone_provisioning_rls.py  0020_sms_foundation.py  0021_sms_rls.py  0022_sms_queue_routing.py  0023_disposition_codes.py  0024_disposition_codes_rls.py  0025_i18n_language_fields.py  0026_sso_foundation.py  0027_sso_rls.py  0028_connectwise_integration.py  0029_connectwise_rls.py  0030_ai_agent_tables.py  0031_ai_agent_rls.py  0032_cdr_queue_id.py  0033_parking_lots.py  0034_parking_lots_rls.py  0035_tcpa_compliance.py  0036_tcpa_compliance_rls.py  0037_boss_admin.py  0038_boss_admin_rls.py  0039_sites.py  0040_sites_rls.py  (+26 more)
api/src/new_phone/: config.py  main.py
api/src/new_phone/auth/: encryption.py  jwt.py  mfa.py  passwords.py  rbac.py
api/src/new_phone/db/: base.py  engine.py  rls.py
api/src/new_phone/events/: publisher.py
api/src/new_phone/freeswitch/: config_sync.py  xml_builder.py  xml_curl_router.py
api/src/new_phone/integrations/: connectwise_client.py
api/src/new_phone/jobs/: sms_retry.py
api/src/new_phone/middleware/: api_key_auth.py  error_handler.py  metrics.py  rate_limit.py  request_logging.py  security_headers.py
api/src/new_phone/migration/: csv_importer.py  freepbx_parser.py  threecx_parser.py
api/src/new_phone/models/: ai_agent_context.py  ai_agent_conversation.py  ai_agent_provider_config.py  ai_agent_tool_definition.py  api_key.py  audio_prompt.py  audit_log.py  billing.py  boss_admin.py  building_webhook.py  caller_id_rule.py  camp_on.py  cdr.py  channel_config.py  compliance_monitoring.py  conference_bridge.py  crm_config.py  cw_company_mapping.py  cw_config.py  cw_ticket_log.py  device.py  did.py  disposition.py  dnc.py  door_station.py  extension.py  follow_me.py  holiday_calendar.py  hospitality.py  inbound_route.py  ivr_menu.py  migration.py  outbound_route.py  page_group.py  paging_zone.py  panic_alert.py  parking_lot.py  phone_app_config.py  phone_model.py  port_request.py  (+24 more)
api/src/new_phone/phone_apps/: auth.py  renderers.py  router.py  service.py
api/src/new_phone/plugins/: models.py  router.py  schemas.py  service.py
api/src/new_phone/providers/: base.py  clearlyip.py  factory.py  twilio.py
api/src/new_phone/provisioning/: config_builder.py  router.py
api/src/new_phone/routers/: admin.py  ai_agents.py  analytics.py  api_keys.py  audio_prompts.py  audit_logs.py  auth.py  billing.py  boss_admin.py  building_webhook_inbound.py  building_webhooks.py  callbacks.py  caller_id_rules.py  calls.py  camp_on.py  cdrs.py  channels.py  compliance.py  compliance_monitoring.py  conference_bridges.py  connectwise.py  crm_config.py  devices.py  dids.py  disposition_codes.py  door_stations.py  extensions.py  follow_me.py  health.py  holiday_calendars.py  hospitality.py  inbound_routes.py  inter_tenant.py  ivr_menus.py  migration.py  onboarding.py  outbound_routes.py  page_groups.py  paging_zones.py  panic_alerts.py  (+27 more)
api/src/new_phone/schemas/: ai_agent.py  analytics.py  api_key.py  audio_prompt.py  audit_log.py  auth.py  billing.py  boss_admin.py  building_webhook.py  callback.py  (+54 more)
api/tests/: conftest.py  test_audio_prompts.py  test_audit_logs.py  test_auth.py  test_caller_id_rules.py  test_cdrs.py  test_conference_bridges.py  test_config_sync.py  test_dids.py  test_esl_listener.py  test_extensions.py  test_follow_me.py  test_health.py  test_holiday_calendars.py  test_inbound_routes.py  test_ivr_menus.py  test_outbound_routes.py  test_page_groups.py  test_queues.py  test_recordings.py  test_ring_groups.py  test_rls.py  test_sip_trunks.py  test_tenants.py  test_time_conditions.py  test_users.py  test_voicemail.py  test_voicemail_messages.py  test_xml_builder.py  test_xml_curl.py
api/tests/unit/: conftest.py
rust/: Cargo.toml
rust/crates/dpma-service/: Cargo.toml  Dockerfile
rust/crates/e911-handler/: Cargo.toml  Dockerfile
rust/crates/event-router/: Cargo.toml  Dockerfile
rust/crates/parking-manager/: Cargo.toml  Dockerfile
rust/crates/rtp-relay/: Cargo.toml  Dockerfile
rust/crates/sip-proxy/: Cargo.toml  Dockerfile
rust/crates/sms-gateway/: Cargo.toml  Dockerfile
rust/shared/: Cargo.toml
rust/shared/src/: config.rs  health.rs  lib.rs  logging.rs
(+731 files in other folders)
