[workspace]
resolver = "2"
members = [
    "crates/*",
    "shared",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
axum = { version = "0.7", features = ["macros"] }
reqwest = { version = "0.12", features = ["json"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
