[package]
name = "e911-handler"
version = "0.1.0"
edition = "2021"

[dependencies]
np-shared = { path = "../../shared" }
tokio = { workspace = true }
axum = { workspace = true }
quick-xml = { version = "0.37", features = ["serialize"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
