[package]
name = "rtp-relay"
version = "0.1.0"
edition = "2021"

[dependencies]
np-shared = { path = "../../shared" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
axum = { workspace = true }
uuid = { workspace = true }

# SRTP: real AES-128-CTR + HMAC-SHA1-80 per RFC 3711
aes = "0.8"
ctr = "0.9"
hmac = "0.12"
sha1 = "0.10"
